--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(C_code C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(C_code Helloword.c test1.c)
+add_executable(C_code Helloword.c test1.c day2.c)
